misc [platform]: premature obsolescence annotations; minor optimization; formatting
GitOrigin-RevId: bd8d9c8506598c34131bd9160231f3beed8cc3f7